--- a/web/frontend/public/index.html
+++ b/web/frontend/public/index.html
@@ -4,9 +4,24 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Qryzo - Generate, Track & Manage QR Codes Effortlessly" />
-    <title>Qryzo - Professional QR Code Generator</title>
+    <meta name="theme-color" content="#3B82F6" />
+    <meta name="description" content="Generate, track and manage QR codes with Qryzo. Professional QR code generator with analytics, custom branding, and real-time tracking for businesses." />
+    <meta name="keywords" content="QR code generator, QR code analytics, custom QR codes, business QR codes, track QR codes, branded QR codes" />
+    <meta name="author" content="Qryzo" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="Qryzo - Professional QR Code Generator & Analytics" />
+    <meta property="og:description" content="Generate, track and manage QR codes with advanced analytics and custom branding for your business." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://qryzo.com" />
+    <meta property="og:image" content="%PUBLIC_URL%/cryzo.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Qryzo - Professional QR Code Generator" />
+    <meta name="twitter:description" content="Generate, track and manage QR codes with advanced analytics and custom branding." />
+    <meta name="twitter:image" content="%PUBLIC_URL%/cryzo.png" />
+    <link rel="canonical" href="https://qryzo.com" />
+    <title>Qryzo - Professional QR Code Generator & Analytics Platform</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
